@@ -1,4 +1,5 @@
 ver 0.18.22 (not yet released)
+* fix clang 3.6 warnings
 
 ver 0.18.21 (2014/12/17)
 * playlist
